# Multi-Agent-Analytics-Gateway

./: .gitignore  Dockerfile  LICENSE  README.md  architecture.md  compose.yaml  main.py  pyproject.toml  requirements.txt
agents/: controller.py  nl_to_sql_agent.py  response_agent.py  summarization_agent.py  validation_agent.py
api/: server.py
api/models/: sql.py
api/routes/: ask_routes.py  health_routes.py  sql_routes.py
core/: config.py  llm.py  rag.py  sql_executor.py  utils.py
data/: retail.duckdb
db/: duckdb_client.py  index_builder.py  metadata_store.py
ingestion/: converter.py  ingest_all.py  loader.py
scripts/: test_agents.py  test_build_and_search.py  test_pipeline.py  test_rag.py  test_response_agent.py  test_sql_executor.py  test_validator.py
ui/: app.py
